添加：建库脚本

--- a/uaa-server/src/main/resources/templates/index.html
+++ b/uaa-server/src/main/resources/templates/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta http-equiv="pragma" content="no-cache" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache"/>
+    <meta http-equiv="Cache-Control" content="no-cache"/>
     <meta http-equiv="Cache-Control" content="no-store"/>
-    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Expires" content="0"/>
 
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
-    <title >首页</title>
-   
+    <title>首页</title>
+
 </head>
 <body>
-<div >
-    <div >
-        <div >
+<div>
+    <div>
+        <div>
             <span>欢迎您，<em th:text="${user.userName}">用户（name）</em>！</span>
-            <a href="javascript:void(0)" id="logout">[退出]</a>
+            <a th:href="@{/oauth/token}" id="logout">[退出]</a>
         </div>
     </div>
 
