--- a/uaa-server/src/main/resources/templates/userIndex.html
+++ b/uaa-server/src/main/resources/templates/userIndex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.springframework.org/schema/jdbc">
 <head> 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title th:text="#{index.title}"></title>
